[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "colorama>=0.4.6",
    "flask>=3.1.2",
    "httpx[http2]>=0.28.1",
    "psutil>=7.2.1",
    "pysocks>=1.7.1",
    "python-telegram-bot>=22.5",
    "requests>=2.32.5",
]
